# LibSecureStorage

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
examples/: write_read_example.c
lib/linux/: libssl.so.1.1
lib/openssl/include/openssl/: opensslconf.h
lib/openssl/lib/linux/: libcrypto.so.1.1
src/sstorage/: entry.c  entry.h  reader.c  reader.h  sstorage.c  sstorage.h  writer.c  writer.h
